# Smart-Manufacturing-IoT-Services

./: .gitignore  CameraCalibratingStarterScript.sh  ColorCalibratingStarterScript.sh  EndGameStarterScript.sh  InstallationGuide.txt  PictureTakingStarterScript.sh  README.md  ServerStarterScript.sh
CameraCalibratingOption/: CMakeLists.txt  CalibrationResults.yml  CameraCalibrating  main.cpp
ColorCalibrationOption/: CMakeLists.txt  ColorCalibrating  main.cpp
MainModule/: CMakeLists.txt  CalibrationResults.yml  ServerScript.sh  functions.cpp  functions.h  mainProgram.cpp
MainModule/DeepSortFiles/DeepSortCodes/: Detector.cpp  Detector.h  FeatureTensor.cpp  FeatureTensor.h  ToolDetector.cpp  ToolDetector.h  VideoTracker.cpp  VideoTracker.h  model.cpp  model.h  param.cpp  tracker.cpp  tracker.h
MainModule/DeepSortFiles/config/: classes.txt  deepsort_config.txt
MainModule/FaceRecognitionFiles/: FaceClassifier.cpp  FaceClassifier.h  FaceDetector.cpp  FaceDetector.h  HatDetector.cpp  HatDetector.h  label_map.txt
MainModule/new_server/: app.js  package-lock.json  package.json
PictureTakingOption/: CMakeLists.txt  PictureTaking  main.cpp
SeniorProject/: CMakeLists.txt  dialogplanedit.h  mainwindow.cpp  mainwindow.ui
SeniorProjectFinal/: CMakeLists.txt  ProgramParameters.yml  dialogplanedit.cpp  dialogplanedit.ui  mainwindow.cpp  mainwindow.h  matdisplay.cpp  matdisplay.h
build-SeniorProject-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  SeniorProject  build.ninja  rules.ninja  test.yml
build-SeniorProject-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-d9762989625dc14b65ac.json  cmakeFiles-v1-ee01bc481ee240b8b67b.json  codemodel-v2-168bb4c2dfbcde274d1d.json  index-2021-04-15T17-26-37-0729.json  target-SeniorProject-Debug-b15cf1a75952d016f892.json  target-SeniorProject_autogen-Debug-be7d2abf6e523f6c8ca0.json  target-SeniorProject_autogen_timestamp_deps-Debug-13edba78bbde6fae2a1e.json
build-SeniorProject-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProject_autogen/: deps
build-SeniorProject-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProject_autogen/EWIEGA46WW/: moc_dialogplanedit.cpp  moc_dialogplanedit.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_matdisplay.cpp  moc_matdisplay.cpp.d
build-SeniorProject-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProject_autogen/include/: ui_dialogplanedit.h
build-SeniorProjectFinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  SeniorProjectFinal  build.ninja
build-SeniorProjectFinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-78a7dacbeb780bab05bf.json  cmakeFiles-v1-16d6bae0148183b521c6.json  codemodel-v2-0752788f921eb7953486.json  index-2021-04-18T16-34-38-0651.json  target-SeniorProjectFinal-Debug-5c7f7d658ed08575f3a5.json  target-SeniorProjectFinal_autogen-Debug-c2cdcaf31a166c600222.json  target-SeniorProjectFinal_autogen_timestamp_deps-Debug-c8489bcbf008e4bf80b9.json
build-SeniorProjectFinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProjectFinal_autogen/: deps  mocs_compilation.cpp
build-SeniorProjectFinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProjectFinal_autogen/EWIEGA46WW/: moc_dialogplanedit.cpp  moc_dialogplanedit.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_matdisplay.cpp  moc_matdisplay.cpp.d
build-SeniorProjectFinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/SeniorProjectFinal_autogen/include/: ui_mainwindow.h
